# mlir-tutorial

./: CMakeLists.txt  main.cpp  tutorial-opt.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyDialect.td  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyType.h  PolyType.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewriter.cpp  AffineFullUnrollPatternRewriter.h  CMakeLists.txt  Passes.h  Passes.td
lib/Transform/Arith/: CMakeLists.txt  Mul2Add.cpp  Mul2Add.h  Mul2Shl.cpp  Mul2Shl.h
test/: loops.mlir  mul2shl.mlir  poly_test.mlir
tools/: CMakeLists.txt  tutorial-opt.cpp
